# ddtrace-django-spyne-reproduction

./: README.MD  pyproject.toml
django_project/: settings.py  urls.py
soap/: apps.py  models.py  services.py
