[tool.poetry]
name = "ddtrace-django-spyne-reproduction"
version = "0.1.0"
description = ""
authors = ["Jur Clerkx <jur.clerkx@kabisa.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2"
ddtrace = "^2.8.5"
spyne = "^2.14.0"
gunicorn = "^22.0.0"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
